solve horizontal page overflow issue with projects section

--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 @layer utilities {
-    .overflow-auto::-webkit-scrollbar {
+    .overflow-y-auto::-webkit-scrollbar {
         @apply w-1 m-1
     }
-    .overflow-auto::-webkit-scrollbar-track {
+    .overflow-y-auto::-webkit-scrollbar-track {
         @apply w-1
     }
-    .overflow-auto::-webkit-scrollbar-thumb {
+    .overflow-y-auto::-webkit-scrollbar-thumb {
         @apply bg-gradient-to-b from-transparent dark:via-orange-400 via-cyan-400 to-transparent
     }
 }
